modif système de sauvegarde

--- a/src/pages/configurateur.astro
+++ b/src/pages/configurateur.astro
@@ -6,7 +6,7 @@ import CouleursLunettes from "../components/CouleursLunettes.astro";
 import Lunettes from "../components/Lunettes.astro";
 import ResumConfig from "../components/ResumConfig.astro";
 import Tailles from "../components/Tailles.astro";
-import SaveModal from "../components/SaveModal.astro";
+import Save from "../components/Save.astro";
 ---
 
 <Layout>
@@ -211,8 +211,8 @@ import SaveModal from "../components/SaveModal.astro";
       </div>
     </div>
 
-    <!-- Save Modal Component -->
-    <SaveModal />
+    <!-- Save Component -->
+    <Save />
 
     <script is:inline>
       const fullscreenBtn = document.getElementById("fullscreen-btn");
