--- a/src/pages/configurateur.astro
+++ b/src/pages/configurateur.astro
@@ -6,6 +6,7 @@ import CouleursLunettes from "../components/CouleursLunettes.astro";
 import Lunettes from "../components/Lunettes.astro";
 import ResumConfig from "../components/ResumConfig.astro";
 import Tailles from "../components/Tailles.astro";
+import Finitions from "../components/Finitions.astro";
 import Save from "../components/Save.astro";
 ---
 
@@ -114,6 +115,7 @@ import Save from "../components/Save.astro";
           <CouleursLunettes />
           <OptionsVerres />
           <Tailles />
+          <Finitions />
 
           <!-- Bouton Enregistrer -->
           <button
