ajout d'une page modèle

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,7 +14,7 @@ import Footer from "../components/Footer.astro";
     <title>Astro Basics</title>
   </head>
 
-  <body class="min-h-screen bg-base-100 text-base-content flex flex-col">
+  <body class="min-h-screen text-base-content flex flex-col bg-[#f6f8fb]">
     <Header />
     <main class="flex-1">
       <slot />
