--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,11 +8,9 @@ import imageHero from "../assets/imageHero.png";
     <section
       class="hero hero-offset max-w-7xl mx-auto px-4 py-12 md:py-20 lg:py-32 flex flex-col md:flex-col lg:flex-row items-center gap-8 md:gap-10 lg:gap-12"
     >
-      
       <div
         class="hero-row w-full flex flex-col md:flex-col lg:flex-row items-center gap-8 md:gap-10 lg:gap-12"
       >
-        
         <div class="hero-content-left w-full md:w-full lg:w-1/2 text-left">
           <h2
             class="text-2xl md:text-4xl lg:text-5xl font-extrabold text-primary mb-4 md:mb-6"
@@ -33,7 +31,7 @@ import imageHero from "../assets/imageHero.png";
               >Lancer le configurateur <span class="ml-2">→</span></a
             >
             <a
-              href="#"
+              href="/modele"
               class="btn btn-outline flex items-center gap-2 w-full sm:w-auto md:btn-lg lg:btn-lg justify-center"
             >
               <svg
@@ -68,7 +66,6 @@ import imageHero from "../assets/imageHero.png";
           </div>
         </div>
 
-        
         <div
           class="hero-image w-full md:w-full lg:w-1/2 flex justify-center mt-4 md:mt-6 lg:mt-0"
         >
