--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,7 +8,7 @@ const isAuthenticated = !!Astro.cookies.get("pb_auth")?.value;
 ---
 
 <header
-  class="fixed top-0 left-0 w-full bg-base-100 border-b border-base-300 z-100"
+  class="fixed top-0 left-0 w-full bg-[#FEFEFE] border-b border-base-300 z-100"
 >
   <div class="flex items-center justify-between px-4 py-3 lg:px-8">
     <div class="flex items-center gap-2">
@@ -28,7 +28,7 @@ const isAuthenticated = !!Astro.cookies.get("pb_auth")?.value;
     <nav
       class="hidden xl:flex gap-8 text-base xl:text-lg text-base-content font-medium"
     >
-      <a href="#" class="hover:text-primary transition-colors"
+      <a href="/modele" class="hover:text-primary transition-colors"
         >Choix du modèle</a
       >
       <a href="/configurateur" class="hover:text-primary transition-colors"
@@ -119,7 +119,9 @@ const isAuthenticated = !!Astro.cookies.get("pb_auth")?.value;
     class="fixed top-0 left-0 w-full h-screen bg-base-100 flex flex-col justify-start pt-[25vh] items-center gap-6 py-8 text-xl md:text-2xl font-medium text-base-content -z-40 xl:hidden"
     style="display: none;"
   >
-    <a href="#" class="hover:text-primary transition-colors">Choix du modèle</a>
+    <a href="/modele" class="hover:text-primary transition-colors"
+      >Choix du modèle</a
+    >
     <a href="configurateur" class="hover:text-primary transition-colors"
       >Personnalisation</a
     >
